--- a/products/지분대출/토지-임야/index.html
+++ b/products/지분대출/토지-임야/index.html
@@ -5,28 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/styles.css" />
 
-  <title>단독주택 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기</title>
+  <title>토지(임야) 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기</title>
   <meta name="description" content="공동소유 지분율, 선순위 대출, 보증금을 모두 반영해 실제 온투업 취급 사례를 기준으로 한도와 예상 금리를 안내합니다. 개인정보 입력 없이 바로 계산해 볼 수 있으며, 대출 가능 시 조건에 맞는 온투업사의 대출 담당자를 안내해 드립니다. 직접 온투업사 대출 담당자와 상담을 통해 최종 대출 가능 여부와 구체적인 조건을 확인해 주세요.">
-  <link rel="canonical" href="https://www.huchulab.com/products/지분대출/단독주택" />
+  <link rel="canonical" href="https://www.huchulab.com/products/지분대출/토지-임야" />
 
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="후추(Huchu)">
-  <meta property="og:title" content="단독주택 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기">
+  <meta property="og:title" content="토지(임야) 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기">
   <meta property="og:description" content="지분율·선순위·보증금 반영, 실제 온투업 사례 기반 한도·금리 안내. 개인정보 입력 없이 즉시 계산하고, 결과 화면에서 온투업 담당자와 상담하세요.">
-  <meta property="og:url" content="https://www.huchulab.com/products/지분대출/단독주택">
-  <meta property="og:image" content="https://www.huchulab.com/assets/og/huchu-house-share-loan.png">
+  <meta property="og:url" content="https://www.huchulab.com/products/지분대출/토지-임야">
+  <meta property="og:image" content="https://www.huchulab.com/assets/og/huchu-land-share-loan.png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="단독주택 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기">
+  <meta name="twitter:title" content="토지(임야) 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기">
   <meta name="twitter:description" content="지분율·선순위·보증금 반영, 실제 온투업 사례 기반 한도·금리 안내. 개인정보 입력 없이 즉시 계산하고, 결과 화면에서 온투업 담당자와 상담하세요.">
-  <meta name="twitter:image" content="https://www.huchulab.com/assets/og/huchu-house-share-loan.png">
+  <meta name="twitter:image" content="https://www.huchulab.com/assets/og/huchu-land-share-loan.png">
 
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"WebPage","name":"단독주택 지분대출 | 후추","url":"https://www.huchulab.com/products/지분대출/단독주택","description":"공동소유 지분율, 선순위 대출, 보증금을 반영한 실제 온투업 사례 기준의 한도·금리 안내. 개인정보 입력 없이 즉시 계산하고, 결과 화면에서 온투업 담당자와 상담."}
+  {"@context":"https://schema.org","@type":"WebPage","name":"토지(임야) 지분대출 | 후추","url":"https://www.huchulab.com/products/지분대출/토지-임야","description":"공동소유 지분율, 선순위 대출, 보증금을 반영한 실제 온투업 사례 기준의 한도·금리 안내. 개인정보 입력 없이 즉시 계산하고, 결과 화면에서 온투업 담당자와 상담."}
   </script>
   <script type="application/ld+json">
   {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
     {"@type":"ListItem","position":1,"name":"지분대출","item":"https://www.huchulab.com/products/지분대출"},
-    {"@type":"ListItem","position":2,"name":"단독주택 지분대출","item":"https://www.huchulab.com/products/지분대출/단독주택"}
+    {"@type":"ListItem","position":2,"name":"토지(임야) 지분대출","item":"https://www.huchulab.com/products/지분대출/토지-임야"}
   ]}
   </script>
   <script type="application/ld+json">
@@ -54,7 +54,7 @@
 <body>
   <main class="product-page product-share-loan">
     <header class="page-hero">
-      <h1>단독주택 지분대출</h1>
+      <h1>토지(임야) 지분대출</h1>
       <p class="lead">
         공동소유 지분율, 선순위 대출, 보증금을 모두 반영해 실제 온투업 취급 사례를 기준으로 한도와 예상 금리를 안내합니다.
         개인정보 입력 없이 바로 계산하고, 대출 가능 시 조건에 맞는 온투업사의 대출 담당자를 안내해 드립니다.
@@ -128,7 +128,7 @@
       <ul>
         <li><a href="/products/지분대출/아파트">아파트 지분대출</a></li>
         <li><a href="/products/지분대출/빌라-다세대-연립">빌라 지분대출</a></li>
-        <li><a href="/products/지분대출/토지-임야">토지 지분대출</a></li>
+        <li><a href="/products/지분대출/단독주택">단독주택 지분대출</a></li>
         <li><a href="/products/지분대출">지분대출(허브)</a></li>
         <li><a href="/products/담보대출">담보대출(허브)</a></li>
         <li><a href="/products/경락잔금대출">경락잔금대출(허브)</a></li>
