--- a/products/지분대출/빌라-다세대-연립/index.html
+++ b/products/지분대출/빌라-다세대-연립/index.html
@@ -1,49 +1,69 @@
 <!doctype html>
 <html lang="ko">
 <head>
+  <!-- 공통 기본 -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/styles.css" />
 
-  <title>단독주택 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기</title>
+  <!-- 페이지 전용: Title/Meta/OG/Canonical -->
+  <title>빌라 지분대출(다세대/연립) | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기</title>
   <meta name="description" content="공동소유 지분율, 선순위 대출, 보증금을 모두 반영해 실제 온투업 취급 사례를 기준으로 한도와 예상 금리를 안내합니다. 개인정보 입력 없이 바로 계산해 볼 수 있으며, 대출 가능 시 조건에 맞는 온투업사의 대출 담당자를 안내해 드립니다. 직접 온투업사 대출 담당자와 상담을 통해 최종 대출 가능 여부와 구체적인 조건을 확인해 주세요.">
-  <link rel="canonical" href="https://www.huchulab.com/products/지분대출/단독주택" />
+  <link rel="canonical" href="https://www.huchulab.com/products/지분대출/빌라-다세대-연립" />
 
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="후추(Huchu)">
-  <meta property="og:title" content="단독주택 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기">
+  <meta property="og:title" content="빌라 지분대출(다세대/연립) | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기">
   <meta property="og:description" content="지분율·선순위·보증금 반영, 실제 온투업 사례 기반 한도·금리 안내. 개인정보 입력 없이 즉시 계산하고, 결과 화면에서 온투업 담당자와 상담하세요.">
-  <meta property="og:url" content="https://www.huchulab.com/products/지분대출/단독주택">
-  <meta property="og:image" content="https://www.huchulab.com/assets/og/huchu-house-share-loan.png">
+  <meta property="og:url" content="https://www.huchulab.com/products/지분대출/빌라-다세대-연립">
+  <meta property="og:image" content="https://www.huchulab.com/assets/og/huchu-villa-share-loan.png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="단독주택 지분대출 | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기">
+  <meta name="twitter:title" content="빌라 지분대출(다세대/연립) | 개인정보 입력 없이 한도·금리 계산 – 후추 대출계산기">
   <meta name="twitter:description" content="지분율·선순위·보증금 반영, 실제 온투업 사례 기반 한도·금리 안내. 개인정보 입력 없이 즉시 계산하고, 결과 화면에서 온투업 담당자와 상담하세요.">
-  <meta name="twitter:image" content="https://www.huchulab.com/assets/og/huchu-house-share-loan.png">
+  <meta name="twitter:image" content="https://www.huchulab.com/assets/og/huchu-villa-share-loan.png">
 
+  <!-- (선택) JSON-LD: WebPage + Breadcrumb + FAQ -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"WebPage","name":"단독주택 지분대출 | 후추","url":"https://www.huchulab.com/products/지분대출/단독주택","description":"공동소유 지분율, 선순위 대출, 보증금을 반영한 실제 온투업 사례 기준의 한도·금리 안내. 개인정보 입력 없이 즉시 계산하고, 결과 화면에서 온투업 담당자와 상담."}
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "빌라 지분대출 (다세대/연립) | 후추",
+    "url": "https://www.huchulab.com/products/지분대출/빌라-다세대-연립",
+    "description": "공동소유 지분율, 선순위 대출, 보증금을 반영한 실제 온투업 사례 기준의 한도·금리 안내. 개인정보 입력 없이 즉시 계산하고, 결과 화면에서 온투업 담당자와 상담."
+  }
   </script>
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
-    {"@type":"ListItem","position":1,"name":"지분대출","item":"https://www.huchulab.com/products/지분대출"},
-    {"@type":"ListItem","position":2,"name":"단독주택 지분대출","item":"https://www.huchulab.com/products/지분대출/단독주택"}
-  ]}
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"지분대출","item":"https://www.huchulab.com/products/지분대출"},
+      {"@type":"ListItem","position":2,"name":"빌라 지분대출","item":"https://www.huchulab.com/products/지분대출/빌라-다세대-연립"}
+    ]
+  }
   </script>
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"FAQPage","mainEntity":[
-    {"@type":"Question","name":"공동소유자 전원의 동의가 필요한가요?","acceptedAnswer":{"@type":"Answer","text":"아니요. 다른 지분권자의 동의는 필요 없습니다. 다만, 임대 중인 부동산의 경우 임차인 동의가 필요할 수 있습니다."}},
-    {"@type":"Question","name":"중도상환수수료가 있나요?","acceptedAnswer":{"@type":"Answer","text":"없습니다. 다만 만기 이후 기간 연장 시 1%~3% 내 범위에서 발생될 수 있습니다(업체별 상이)."}},
-    {"@type":"Question","name":"플랫폼수수료가 뭔가요?","acceptedAnswer":{"@type":"Answer","text":"온라인투자연계금융업은 자체 플랫폼을 통해 개인 간 투자금과 대출금을 연계하는 구조이며, 플랫폼수수료는 이 과정에서 발생하는 서비스 이용료입니다."}},
-    {"@type":"Question","name":"계산기 사용 시 신용점수에 영향이 있나요?","acceptedAnswer":{"@type":"Answer","text":"영향이 없습니다. 계산은 개인정보 입력 없이 이뤄지며, 여러 번 계산해도 신용점수는 변동되지 않습니다."}},
-    {"@type":"Question","name":"후추는 어떤 회사인가요?","acceptedAnswer":{"@type":"Answer","text":"저희는 마케팅 회사입니다. 대출 조건을 알아보는 과정에서 개인정보 노출 우려와 정보 비대칭 문제를 줄이기 위해 서비스를 제공합니다."}}
-  ]}
+  {
+    "@context":"https://schema.org",
+    "@type":"FAQPage",
+    "mainEntity":[
+      {"@type":"Question","name":"공동소유자 전원의 동의가 필요한가요?","acceptedAnswer":{"@type":"Answer","text":"아니요. 다른 지분권자의 동의는 필요 없습니다. 다만, 임대 중인 부동산의 경우 임차인 동의가 필요할 수 있습니다."}},
+      {"@type":"Question","name":"중도상환수수료가 있나요?","acceptedAnswer":{"@type":"Answer","text":"없습니다. 다만 만기 이후 기간 연장 시 1%~3% 내 범위에서 발생될 수 있습니다(업체별 상이)."}},
+      {"@type":"Question","name":"플랫폼수수료가 뭔가요?","acceptedAnswer":{"@type":"Answer","text":"온라인투자연계금융업은 자체 플랫폼을 통해 개인 간 투자금과 대출금을 연계하는 구조이며, 플랫폼수수료는 이 과정에서 발생하는 서비스 이용료입니다."}},
+      {"@type":"Question","name":"계산기 사용 시 신용점수에 영향이 있나요?","acceptedAnswer":{"@type":"Answer","text":"영향이 없습니다. 계산은 개인정보 입력 없이 이뤄지며, 여러 번 계산해도 신용점수는 변동되지 않습니다."}},
+      {"@type":"Question","name":"후추는 어떤 회사인가요?","acceptedAnswer":{"@type":"Answer","text":"저희는 마케팅 회사입니다. 대출 조건을 알아보는 과정에서 개인정보 노출 우려와 정보 비대칭 문제를 줄이기 위해 서비스를 제공합니다."}}
+    ]
+  }
   </script>
   <style>
+    /* 페이지 섹션에 기본 여백만 보강 (선택) */
     .product-page .page-hero{max-width:960px;margin:0 auto;padding:24px 16px}
     .product-page h1{margin:0 0 8px}
     .product-page .lead{color:#555;line-height:1.6}
     .product-page section{max-width:960px;margin:24px auto;padding:0 16px}
-    .product-page .bullets,.product-page .steps,.product-page .cases{padding-left:18px;line-height:1.7}
+    .product-page .bullets{padding-left:18px;line-height:1.7}
+    .product-page .steps{padding-left:18px;line-height:1.7}
+    .product-page .cases{padding-left:18px;line-height:1.7}
     .product-page .faq h3{margin:16px 0 6px}
     .btn{display:inline-block;padding:10px 14px;border-radius:8px;border:1px solid #d0d7e2;text-decoration:none}
     .btn-primary{background:#1a365d;color:#fff;border-color:#1a365d}
@@ -52,9 +72,13 @@
   </style>
 </head>
 <body>
+  <!-- 공통 헤더/네비게이션이 있다면 여기 -->
+  <!-- <header>...</header> -->
+
+  <!-- 본문 시작 -->
   <main class="product-page product-share-loan">
     <header class="page-hero">
-      <h1>단독주택 지분대출</h1>
+      <h1>빌라 지분대출 (다세대/연립 지분 담보대출)</h1>
       <p class="lead">
         공동소유 지분율, 선순위 대출, 보증금을 모두 반영해 실제 온투업 취급 사례를 기준으로 한도와 예상 금리를 안내합니다.
         개인정보 입력 없이 바로 계산하고, 대출 가능 시 조건에 맞는 온투업사의 대출 담당자를 안내해 드립니다.
@@ -63,7 +87,8 @@
       <a class="btn btn-primary" href="/">개인정보 입력 없이 바로 계산하기</a>
     </header>
 
-    <section aria-labelledby="quicklook"><h2 id="quicklook">한눈에 보기</h2>
+    <section aria-labelledby="quicklook">
+      <h2 id="quicklook">한눈에 보기</h2>
       <ul class="bullets">
         <li><strong>대상:</strong> 매매·상속·증여·이혼 등으로 지분을 보유한 공동소유자</li>
         <li><strong>한도:</strong> (시세 × 지분율) × LTV − 선순위 대출 − 임차보증금</li>
@@ -75,7 +100,8 @@
       <p><a class="btn btn-outline" href="/">개인정보 입력 없이 바로 계산하기</a></p>
     </section>
 
-    <section aria-labelledby="example"><h2 id="example">(예시) 대출 한도 계산</h2>
+    <section aria-labelledby="example">
+      <h2 id="example">(예시) 대출 한도 계산</h2>
       <p>
         <strong>가정:</strong> 시세 5억, 지분 50%, 선순위 대출 5천만, 임차보증금 3천만, LTV 70%<br>
         <strong>한도 계산:</strong> (5억 × 50%) × 70% − 8천만 = <strong>9천 5백만 원</strong><br>
@@ -84,7 +110,8 @@
       <p><a class="btn btn-outline" href="/">개인정보 입력 없이 바로 계산하기</a></p>
     </section>
 
-    <section aria-labelledby="process"><h2 id="process">진행 절차 &amp; 필요서류</h2>
+    <section aria-labelledby="process">
+      <h2 id="process">진행 절차 &amp; 필요서류</h2>
       <ol class="steps">
         <li><strong>사전 확인:</strong> 등기부(소유·지분율), 임대차현황, 선순위/보증금</li>
         <li><strong>대출 가능 여부 확인:</strong> 후추 계산기로 산출 → 결과 화면에서만 온투업 담당자 안내</li>
@@ -93,7 +120,8 @@
       </ol>
     </section>
 
-    <section aria-labelledby="cases"><h2 id="cases">온투업 실제 승인 사례</h2>
+    <section aria-labelledby="cases">
+      <h2 id="cases">온투업 실제 승인 사례</h2>
       <ul class="cases">
         <li><strong>서울 종로구·단독주택</strong> | 시세 25.1억 | 지분 70% | 선순위 7천만 | <strong>실행 7억 / 연 13.2% / LTV 43.82%</strong></li>
         <li><strong>서울 강북구·아파트</strong> | 시세 6.85억 | 지분 50% | 보증금 1.2억 | <strong>실행 1천만 / 연 12.0% / LTV 37.96%</strong></li>
@@ -101,22 +129,28 @@
       <p class="disclaimer">※ 실제 조건은 담보물건·신용·시장 상황에 따라 달라질 수 있습니다.</p>
     </section>
 
-    <section aria-labelledby="faq"><h2 id="faq">자주 묻는 질문(FAQ)</h2>
+    <section aria-labelledby="faq">
+      <h2 id="faq">자주 묻는 질문(FAQ)</h2>
       <div class="faq">
         <h3>Q1. 공동소유자 전원의 동의가 필요한가요?</h3>
         <p>A. 아니요. 다른 지분권자의 동의는 필요 없습니다. 다만, 임대 중인 부동산의 경우 임차인 동의가 필요할 수 있습니다.</p>
+
         <h3>Q2. 중도상환수수료가 있나요?</h3>
         <p>A. 없습니다. 다만 만기 이후 기간 연장 시 1%~3% 내 범위에서 발생됩니다(업체별 상이).</p>
+
         <h3>Q3. 플랫폼수수료가 뭔가요?</h3>
         <p>A. 온라인투자연계금융업은 자체 플랫폼을 통해 개인 간 투자금과 대출금을 연계하는 구조이며, 플랫폼수수료는 이 과정에서 발생하는 서비스 이용료입니다.</p>
+
         <h3>Q4. 계산기 사용 시 신용점수에 영향이 있나요?</h3>
         <p>A. 영향이 없습니다. 계산은 개인정보 입력 없이 이뤄지며, 여러 번 계산해도 신용점수는 변동되지 않습니다.</p>
+
         <h3>Q5. 후추는 어떤 회사인가요?</h3>
         <p>A. 저희는 마케팅 회사입니다. 대출 조건을 알아보는 과정에서 개인정보 노출 우려와 정보 비대칭 문제를 줄이기 위해 서비스를 제공합니다.</p>
       </div>
     </section>
 
-    <section aria-labelledby="notice"><h2 id="notice">근거 &amp; 주의사항</h2>
+    <section aria-labelledby="notice">
+      <h2 id="notice">근거 &amp; 주의사항</h2>
       <ul class="bullets">
         <li>데이터 출처: 각 온투업체의 대출 승인 사례, 온투업 중앙기록관리기관 공시를 운영자가 수동 검증·정리하여 반영</li>
         <li>통계 기준월: 페이지 상단에 최근 월로 표시(예: <strong>2025/10 기준</strong>)</li>
@@ -127,7 +161,7 @@
     <nav class="related-links" aria-label="내부 링크" style="max-width:960px;margin:24px auto;padding:0 16px">
       <ul>
         <li><a href="/products/지분대출/아파트">아파트 지분대출</a></li>
-        <li><a href="/products/지분대출/빌라-다세대-연립">빌라 지분대출</a></li>
+        <li><a href="/products/지분대출/단독주택">단독주택 지분대출</a></li>
         <li><a href="/products/지분대출/토지-임야">토지 지분대출</a></li>
         <li><a href="/products/지분대출">지분대출(허브)</a></li>
         <li><a href="/products/담보대출">담보대출(허브)</a></li>
@@ -136,5 +170,9 @@
       </ul>
     </nav>
   </main>
+  <!-- 본문 끝 -->
+
+  <!-- 공통 푸터가 있다면 여기 -->
+  <!-- <footer>...</footer> -->
 </body>
 </html>
